<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    tools:context="com.quiz.activities.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <!--User Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/user" />

            <com.quiz.font.EditTextRegular
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/password" />

            <com.quiz.font.EditTextRegular
                android:id="@+id/passwordETL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/line"></View>

        <com.quiz.font.ButtonRegular
            android:id="@+id/btnLoginB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/bg_button"
            android:padding="@dimen/_10sdp"
            android:text="@string/log_id"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16sdp" />

        <com.quiz.font.TextViewRegular
            android:id="@+id/txtForgotPwdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.quiz.font.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <com.quiz.font.TextViewRegular
                android:id="@+id/txtSignUpNowTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:text="@string/sign_up_now"
                android:textColor="@color/colorSignUp"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <!--OR Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/white"></View>

            <com.quiz.font.TextViewRegular
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/colorDarkBlue"
                android:textSize="@dimen/_16sdp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/white"></View>
        </LinearLayout>

        <com.quiz.font.TextViewMedium
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/_13sdp"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgGooglePlusIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/google_plus_logo" />

            <ImageView
                android:id="@+id/imgFacebookIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/imgLinkedInIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                android:src="@drawable/linkedin_logo" />

            <ImageView
                android:id="@+id/imgTwitterIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                android:src="@drawable/twitter" />

        </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/FBlogin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:visibility="gone" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"></com.google.android.gms.common.SignInButton>

    </LinearLayout>


</LinearLayout>
