<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quiz.activities.LeaderBoardActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBackIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/back" />

            <com.quiz.font.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="true"
                android:text="@string/leaderboard"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp" />

            <ImageView
                android:id="@+id/imgDashboardIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/dashboard" />

        </LinearLayout>

        <com.quiz.font.TextViewRegular
            android:id="@+id/txtTimeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="30/50"
            android:textColor="@color/colorSignUp"
            android:textSize="@dimen/_35sdp" />

        <com.quiz.font.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/test_clear"
            android:textColor="@color/colorSignUp"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_110sdp"
        android:background="@drawable/buttonbg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:orientation="vertical">

            <com.quiz.font.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_test_report"
                android:textColor="@color/colorGreyText"
                android:textSize="@dimen/_20sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:textStyle="bold" />

            <include layout="@layout/item_tests"></include>
            <include layout="@layout/item_tests"></include>
            <include layout="@layout/item_tests"></include>
            <include layout="@layout/item_tests"></include>
            <include layout="@layout/item_tests"></include>


            <com.quiz.font.ButtonRegular
                android:id="@+id/btnSubmitB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorGreyText"
                android:text="@string/more"
                android:textSize="@dimen/_16sdp"
                android:textAllCaps="false"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
