<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quiz.activities.HomeActivity">


    <!--Top Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProfileIV"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle_white_24dp" />

            <com.quiz.font.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/the_quiz"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp" />

            <ImageView
                android:id="@+id/imgDashboardIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/dashboard" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_80sdp"
        android:background="@drawable/buttonbg"
        android:weightSum="4"
        android:orientation="vertical">

        <com.quiz.font.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/welcome_to_quiz"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_25sdp" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/playQuizLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/playbg"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:src="@drawable/play"/>

            <com.quiz.font.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/play_quiz"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_21sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/practiceQuizLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/practicebg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:src="@drawable/practice"/>

            <com.quiz.font.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/practice"
                android:textColor="@color/white"
                android:textSize="@dimen/_21sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/leaderBoardLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/leaderboardbg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:src="@drawable/stats"/>

            <com.quiz.font.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:padding="@dimen/_5sdp"
                android:text="@string/leader_board"
                android:textColor="@color/white"
                android:textSize="@dimen/_21sdp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@android:color/transparent" />

    </LinearLayout>


</RelativeLayout>
