<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quiz.activities.ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBackIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/back" />

            <com.quiz.font.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/profile"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp" />


            <ImageView
                android:id="@+id/imgLogoutIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/ic_white_logout" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_90sdp"
        android:background="@drawable/buttonbg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_35sdp"
            android:layout_marginRight="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:orientation="vertical">


            <com.quiz.font.TextViewMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGreyText"
                android:textSize="@dimen/_11sdp" />

            <com.quiz.font.TextViewRegular
                android:id="@+id/txtNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="Name"
                android:textColor="@color/colorDarkGreyText"
                android:textSize="@dimen/_18sdp" />


            <com.quiz.font.TextViewMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_15sdp"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGreyText"
                android:textSize="@dimen/_11sdp" />

            <com.quiz.font.TextViewRegular
                android:id="@+id/txtEmailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@android:color/transparent"
                android:text="Email"
                android:textColor="@color/colorDarkGreyText"
                android:textSize="@dimen/_18sdp" />


            <com.quiz.font.TextViewMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/mobile"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/colorDarkGreyText"
                android:textSize="@dimen/_11sdp" />

            <com.quiz.font.TextViewRegular
                android:id="@+id/txtMobileTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@android:color/transparent"
                android:text="Mobile"
                android:textColor="@color/colorDarkGreyText"
                android:textSize="@dimen/_18sdp" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
